chkconfig support (builds on centos-6.4 fail)

--- a/templates/default/agent.initd.erb
+++ b/templates/default/agent.initd.erb
@@ -1,4 +1,6 @@
 #!/bin/sh
+# chkconfig: 2345 95 20
+# description: TeamCity Build Agent
 ## THIS FILE IS MANAGED BY CHEF. ALL CHANGES WILL BE OVERWRITTEN!
 
 case "$1" in
